2.0
  * TimeFunction EaseFromTo start in DELAY state
  * Fixed ComplexShape.contains() bug when scaleX or scaleY is 0

1.4
  * Renamed MyRenderer to PRenderer
  * New abstract class : Renderer
  * New Renderer class for buffered rendering : PGraphicsRenderer
  * Drawing to file functions removed from library
  * New class : MatrixStack

1.3
  * Prints library version when instantiating MyRenderer
  * Keeps retro compatibility with unversioned json files
  * Returns null when trying to read corrupted json files
  * BoundingBox class and getBoundingBox functions for Shape objects
  * Implemented contains method of class ComplexShape
  * Pivot/origin is automatically set to center of bounding box of ComplexShapes
  * paused property to Avatar class (suspend animation updating)
  * preTransform affine matrix for complexShape objects (gives ability keep modifications separated from original geometry)
  * Function resetTransform of ComplexShape class
  * Function invalidateBoundingBox of ComplexShape
  * Function getRootShape of ComplexShape class (needed by function "invalidateBoundingBox")
  * Getter and setter function for the pre-transform matrix of ComplexShape instances
  * Removed time function "TFConstant" (redundant with manual softTransform)