@@ -132,12 +132,12 @@ source.repository=https://github.com/gweltou/libAvatar.git
 # This is used to compare different versions of the same Library, and check if 
 # an update is available.
 
-library.version=2
+library.version=3
 
 
 # The version as the user will see it.
 
-library.prettyVersion=1.4
+library.prettyVersion=2.0
 
 
 # The min and max revision of Processing compatible with your Library.
